--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
                   <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                       <li class=" nav-item">
-                        <a class=" nav-link active" aria-current="page" href="/Proyecto/pages/nosotros.html">Nosotros</a>
+                        <a class=" nav-link active" aria-current="page" href="Proyecto/pages/nosotros.html">Nosotros</a>
                       </li>
                       <li class=" nav-item">
-                        <a class=" nav-link" href="/Proyecto/pages/galeria.html">Galería</a>
+                        <a class=" nav-link" href="Proyecto/pages/galeria.html">Galería</a>
                       </li>
                       <li class=" nav-item">
-                        <a class=" nav-link" href="/Proyecto/pages/noticias.html">Noticias</a>
+                        <a class=" nav-link" href="Proyecto/pages/noticias.html">Noticias</a>
                       </li>
                       <li class=" nav-item">
-                        <a class=" nav-link" href="/Proyecto/pages/equipo.html">Equipo</a>
+                        <a class=" nav-link" href="Proyecto/pages/equipo.html">Equipo</a>
                       </li>
                       <li class=" nav-item">
-                        <a class=" nav-link" href="/Proyecto/pages/contacto.html">Contacto</a>
+                        <a class=" nav-link" href="Proyecto/pages/contacto.html">Contacto</a>
                       </li>
                     </ul>
                   </div>
