--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
                   <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                       <li class=" nav-item">
-                        <a class=" nav-link active" aria-current="page" href="Proyecto/pages/nosotros.html">Nosotros</a>
+                        <a class=" nav-link active" aria-current="page" href="pages/nosotros.html">Nosotros</a>
                       </li>
                       <li class=" nav-item">
-                        <a class=" nav-link" href="Proyecto/pages/galeria.html">Galería</a>
+                        <a class=" nav-link" href="./pages/galeria.html">Galería</a>
                       </li>
                       <li class=" nav-item">
-                        <a class=" nav-link" href="Proyecto/pages/noticias.html">Noticias</a>
+                        <a class=" nav-link" href="./pages/noticias.html">Noticias</a>
                       </li>
                       <li class=" nav-item">
-                        <a class=" nav-link" href="Proyecto/pages/equipo.html">Equipo</a>
+                        <a class=" nav-link" href="./pages/equipo.html">Equipo</a>
                       </li>
                       <li class=" nav-item">
-                        <a class=" nav-link" href="Proyecto/pages/contacto.html">Contacto</a>
+                        <a class=" nav-link" href="./pages/contacto.html">Contacto</a>
                       </li>
                     </ul>
                   </div>
@@ -95,22 +95,22 @@
         <nav>
             <ul id="foot"> <!--enlaces relativos-->
                 <li>
-                    <a class="links" href="../index.html">INICIO</a>
+                    <a class="links" href="./index.html">INICIO</a>
                 </li>
                 <li>
-                    <a class="links" href="nosotros.html">NOSOTROS</a>
+                    <a class="links" href="./pages/nosotros.html">NOSOTROS</a>
                 </li>
                 <li>
-                    <a class="links" href="galeria.html">GALERIA</a>
+                    <a class="links" href="./pages/galeria.html">GALERIA</a>
                 </li>
                 <li>
-                    <a class="links" href="noticias.html">NOTICIAS</a>
+                    <a class="links" href="./pages/noticias.html">NOTICIAS</a>
                 </li>
                 <li>
-                    <a class="links" href="equipo.html">EQUIPO</a>
+                    <a class="links" href="./pages/equipo.html">EQUIPO</a>
                 </li>
                 <li>
-                    <a class="links" href="contacto.html">CONTACTO</a>
+                    <a class="links" href="./pages/contacto.html">CONTACTO</a>
                 </li>
             </ul>
         </nav>
