--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
                         <a class=" nav-link active" aria-current="page" href="pages/nosotros.html">Nosotros</a>
                       </li>
                       <li class=" nav-item">
-                        <a class=" nav-link" href="./pages/galeria.html">Galería</a>
+                        <a class=" nav-link" href="pages/galeria.html">Galería</a>
                       </li>
                       <li class=" nav-item">
-                        <a class=" nav-link" href="./pages/noticias.html">Noticias</a>
+                        <a class=" nav-link" href="pages/noticias.html">Noticias</a>
                       </li>
                       <li class=" nav-item">
-                        <a class=" nav-link" href="./pages/equipo.html">Equipo</a>
+                        <a class=" nav-link" href="pages/equipo.html">Equipo</a>
                       </li>
                       <li class=" nav-item">
-                        <a class=" nav-link" href="./pages/contacto.html">Contacto</a>
+                        <a class=" nav-link" href="pages/contacto.html">Contacto</a>
                       </li>
                     </ul>
                   </div>
@@ -56,17 +56,17 @@
     <section id="entrada">
         <h1>CAMBIAMOS EL MUNDO, UN EDIFICIO A LA VEZ.</h1>
         <div id="botones">
-            <a class="botongaleria" href="./pages/galeria.html">
+            <a class="botongaleria" href="pages/galeria.html">
                 <button>GALERIA</button>
             </a>
-            <a class="botoncontacto" href="./pages/contacto.html">
+            <a class="botoncontacto" href="pages/contacto.html">
              <button>CONTACTO</button>
             </a>
         </div>
     </section>
 
     <section id="proyecto">
-        <img src="./imagenes/galeria/farnsworth.jpg" alt="bienvenida">
+        <img src="imagenes/galeria/farnsworth.jpg" alt="bienvenida">
     </section>
 
     <!-- <section id="enlaces">
@@ -95,22 +95,22 @@
         <nav>
             <ul id="foot"> <!--enlaces relativos-->
                 <li>
-                    <a class="links" href="./index.html">INICIO</a>
+                    <a class="links" href="index.html">INICIO</a>
                 </li>
                 <li>
-                    <a class="links" href="./pages/nosotros.html">NOSOTROS</a>
+                    <a class="links" href="pages/nosotros.html">NOSOTROS</a>
                 </li>
                 <li>
-                    <a class="links" href="./pages/galeria.html">GALERIA</a>
+                    <a class="links" href="pages/galeria.html">GALERIA</a>
                 </li>
                 <li>
-                    <a class="links" href="./pages/noticias.html">NOTICIAS</a>
+                    <a class="links" href="pages/noticias.html">NOTICIAS</a>
                 </li>
                 <li>
-                    <a class="links" href="./pages/equipo.html">EQUIPO</a>
+                    <a class="links" href="pages/equipo.html">EQUIPO</a>
                 </li>
                 <li>
-                    <a class="links" href="./pages/contacto.html">CONTACTO</a>
+                    <a class="links" href="pages/contacto.html">CONTACTO</a>
                 </li>
             </ul>
         </nav>
