--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../imagenes/iconos/6819232.png" type="image/x-icon">
+    <!--link de boostrap antes de mi css siempre por cascada-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <!--mi link css-->
     <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,28 +18,36 @@
     <header id="arriba">
         <p>Re Construye</p>
         <div>
-            <nav>
-                <ul id="links"> <!--enlaces relativos-->
-                    <li>
-                        <a class="links" href="../index.html">INICIO</a>
-                    </li>
-                    <li>
-                        <a class="links" href="nosotros.html">NOSOTROS</a>
-                    </li>
-                    <li>
-                        <a class="links" href="galeria.html">GALERIA</a>
-                    </li>
-                    <li>
-                        <a class="links" href="noticias.html">NOTICIAS</a>
-                    </li>
-                    <li>
-                        <a class="links" href="equipo.html">EQUIPO</a>
-                    </li>
-                    <li>
-                        <a class="links" href="contacto.html">CONTACTO</a>
-                    </li>
-                </ul>
-            </nav>
+            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+                <div class="container-fluid">
+                  <a class="navbar-brand" href="#"></a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                      <li class=" nav-item">
+                        <a class=" nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                      </li>
+                      <li class=" nav-item">
+                        <a class=" nav-link" href="nosotros.html">Nosotros</a>
+                      </li>
+                      <li class=" nav-item">
+                        <a class=" nav-link" href="galeria.html">Galería</a>
+                      </li>
+                      <li class=" nav-item">
+                        <a class=" nav-link" href="noticias.html">Noticias</a>
+                      </li>
+                      <li class=" nav-item">
+                        <a class=" nav-link" href="equipo.html">Equipo</a>
+                      </li>
+                      <li class=" nav-item">
+                        <a class=" nav-link" href="contacto.html">Contacto</a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </nav>
         </div>
     </header>
 
@@ -112,6 +123,8 @@ El equipo de ReConstruye está altamente capacitado y comprometido con la calida
 
         <p>Todos los derechos reservados © 2023 | Pagina creada por Matias Medina.</p>
     </footer>
+<!--script de boostrap-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 
 </body>
 </html>
