--- a/pages/equipo.html
+++ b/pages/equipo.html
@@ -53,29 +53,37 @@
 
     <section id="equipo">
         <h1>NUESTRO EQUIPO</h1>
+
         <div class="zaha">
-          <img src="../imagenes/equipo/zaha hadid.jpg" alt="Zaha Hadid">
-          <div class="text">
-            <h2>Zaha Hadid</h2>
-            <p>Zaha Hadid nació en Bagdad, Irak, en 1950. Estudió matemáticas en la Universidad Americana de Beirut antes de mudarse a Londres para estudiar arquitectura en la Architectural Association School of Architecture. Después de trabajar con el arquitecto holandés Rem Koolhaas, fundó su propio estudio, Zaha Hadid Architects, en 1980. Hadid fue la primera mujer en recibir el Premio Pritzker, en 2004, y su obra ha sido reconocida con muchos otros premios a lo largo de su carrera. Desafortunadamente, Hadid falleció en 2016 a la edad de 65 años.</p>
+          <div class="grid-container">
+            <img src="../imagenes/equipo/zaha hadid.jpg" alt="Zaha Hadid">
+            <div class="text">
+              <h2>Zaha Hadid</h2>
+              <p>Zaha Hadid nació en Bagdad, Irak, en 1950. Estudió matemáticas en la Universidad Americana de Beirut antes de mudarse a Londres para estudiar arquitectura en la Architectural Association School of Architecture. Después de trabajar con el arquitecto holandés Rem Koolhaas, fundó su propio estudio, Zaha Hadid Architects, en 1980. Hadid fue la primera mujer en recibir el Premio Pritzker, en 2004, y su obra ha sido reconocida con muchos otros premios a lo largo de su carrera. Desafortunadamente, Hadid falleció en 2016 a la edad de 65 años.</p>
+            </div>
           </div>
-          <div class="clear"></div>
         </div>
+
         <div class="frank">
-          <img src="../imagenes/equipo/frank-gehry.jpeg" alt="Frank Gehry">
-          <div class="text">
-            <h2>Frank Gehry</h2>
-            <p>Frank Gehry nació en Toronto, Canadá, en 1929. Comenzó a estudiar arquitectura en la Universidad del Sur de California en 1949, pero no se graduó hasta 1954, después de haber pasado un tiempo en la Universidad de Harvard. Gehry fundó su propio estudio de arquitectura en Los Ángeles en 1962, y desde entonces ha creado algunos de los edificios más famosos y emblemáticos del mundo. En 1989 recibió el Premio Pritzker, considerado el Nobel de la arquitectura, y ha sido reconocido con muchos otros premios a lo largo de su carrera.</p>
+          <div class="grid-container">
+            <img src="../imagenes/equipo/frank-gehry.jpeg" alt="Frank Gehry">
+            <div class="text">
+              <h2>Frank Gehry</h2>
+              <p>Frank Gehry nació en Toronto, Canadá, en 1929. Comenzó a estudiar arquitectura en la Universidad del Sur de California en 1949, pero no se graduó hasta 1954, después de haber pasado un tiempo en la Universidad de Harvard. Gehry fundó su propio estudio de arquitectura en Los Ángeles en 1962, y desde entonces ha creado algunos de los edificios más famosos y emblemáticos del mundo. En 1989 recibió el Premio Pritzker, considerado el Nobel de la arquitectura, y ha sido reconocido con muchos otros premios a lo largo de su carrera.</p>
+            </div>
           </div>
-        </div>
+        </div>             
+
         <div class="koolhaas">
-          <img src="../imagenes/equipo/Rem Koolhaas.jpg" alt="Rem Koolhaas">
-          <div class="text">
-            <h2>Rem Koolhaas</h2>
-            <p>Rem Koolhaas nació en Rotterdam, Países Bajos, en 1944. Estudió arquitectura en la Universidad de Delft y trabajó con varios arquitectos importantes antes de fundar su propio estudio, OMA (Office for Metropolitan Architecture), en 1975. Koolhaas es conocido por su enfoque experimental y su interés en la teoría y la investigación, así como por sus diseños arquitectónicos innovadores. Ha recibido muchos premios y reconocimientos a lo largo de su carrera, incluyendo el Premio Pritzker en 2000.</p>
+          <div class="grid-container">
+            <img src="../imagenes/equipo/Rem Koolhaas.jpg" alt="Rem Koolhaas">
+            <div class="text">
+              <h2>Rem Koolhaas</h2>
+              <p>Rem Koolhaas nació en Rotterdam, Países Bajos, en 1944. Estudió arquitectura en la Universidad de Delft y trabajó con varios arquitectos importantes antes de fundar su propio estudio, OMA (Office for Metropolitan Architecture), en 1975. Koolhaas es conocido por su enfoque experimental y su interés en la teoría y la investigación, así como por sus diseños arquitectónicos innovadores. Ha recibido muchos premios y reconocimientos a lo largo de su carrera, incluyendo el Premio Pritzker en 2000.</p>
+            </div>
           </div>
         </div>
-      </section>      
+    </section>      
 
       <footer id="footernosotros">
         <nav>
