link footer open other pager

--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -84,16 +84,16 @@
             <nav>
                 <ul class="siguenoslink">
                     <li class="facebook">
-                        <a href="https://www.facebook.com/Coderhouse/">Facebook</a>
+                        <a href="https://www.facebook.com/Coderhouse/" target="_blank">Facebook</a>
                     </li>
                     <li class="instagram">
-                        <a href="https://www.instagram.com/coderhouse/">Instagram</a>
+                        <a href="https://www.instagram.com/coderhouse/" target="_blank">Instagram</a>
                     </li>
                     <li class="twitter">
-                        <a href="https://twitter.com/coderhouse">Twitter</a>
+                        <a href="https://twitter.com/coderhouse" target="_blank">Twitter</a>
                     </li>
                     <li class="linkedin">
-                        <a href="https://www.linkedin.com/school/coderhouse/">Linkedin</a>
+                        <a href="https://www.linkedin.com/school/coderhouse/" target="_blank">Linkedin</a>
                     </li>
                 </ul>
             </nav> 
