ultima corrección general

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -13,7 +13,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/b0c45c5485.js" crossorigin="anonymous"></script>
-    <title>CONTACTO</title>
+    <!--Etiqueta SEO-->
+    <meta name="description" content="Te damos la bienvenida a la sección de Contacto. Aquí podrá ponerse en contacto para presupuesto o cualquier consulta con nosotros.">
+    <meta name="keywords" content="ARQUITECTURA, RECONSTRUYE, RECICLAJE, CASAS, APARTAMENTOS, CONSTRUCCIÓN, ESTUDIO DE ARQUITECTURA, CONTACTO">
+    <title>Re Construye | CONTACTO</title>
 </head>
 <body>
     <header id="arriba">
@@ -101,9 +104,6 @@
           </form>
         </section>
       </div>
-      
-      
-
    
     <section class="google">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d46239.99768275514!2d-56.15381951534498!3d-34.88416798638958!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f80f1dad837bf%3A0x68a78aade62bb913!2sMcDonald&#39;s!5e0!3m2!1ses-419!2suy!4v1682202308169!5m2!1ses-419!2suy" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -111,7 +111,7 @@
 
     <footer id="footernosotros">
         <nav>
-            <ul id="foot"> <!--enlaces relativos-->
+            <ul id="foot">
                 <li>
                     <a class="links" href="../index.html">INICIO</a>
                 </li>
@@ -133,30 +133,40 @@
             </ul>
         </nav>
         <div id="siguenos">
-            <p>SIGUENOS:</p>
-            <nav>
-                <ul class="siguenoslink">
-                    <li class="facebook">
-                        <a href="https://www.facebook.com/Coderhouse/" target="_blank">Facebook</a>
+          <nav>
+              <ul class="siguenoslink">
+                  <li class="facebook">
+                      <a href="https://www.facebook.com/Coderhouse/" target="_blank">
+                        <iconify-icon icon="ant-design:facebook-filled"></iconify-icon>
+                      </a>
                     </li>
-                    <li class="instagram">
-                        <a href="https://www.instagram.com/coderhouse/" target="_blank">Instagram</a>
-                    </li>
-                    <li class="twitter">
-                        <a href="https://twitter.com/coderhouse" target="_blank">Twitter</a>
-                    </li>
-                    <li class="linkedin">
-                        <a href="https://www.linkedin.com/school/coderhouse/" target="_blank">Linkedin</a>
-                    </li>
-                </ul>
-            </nav> 
-        </div>
+                  <li class="instagram">
+                      <a href="https://www.instagram.com/coderhouse/" target="_blank">
+                          <iconify-icon icon="mdi:instagram"></iconify-icon>
+                      </a>
+                  </li>
+                  <li class="twitter">                        
+                      <a href="https://twitter.com/coderhouse" target="_blank">
+                          <iconify-icon icon="formkit:twitter"></iconify-icon></iconify-icon>
+                      </a>
+                  </li>
+                  <li class="linkedin">                        
+                      <a href="https://www.linkedin.com/school/coderhouse/" target="_blank">
+                          <iconify-icon icon="mdi:linkedin"></iconify-icon>
+                      </a>
+                  </li>
+              </ul>
+          </nav> 
+      </div>
 
-        <p>Todos los derechos reservados © 2023 | Pagina creada por Matias Medina.</p>
-    </footer>
+      <p>Todos los derechos reservados © 2023 | Pagina creada por Matias Medina.</p>
+  </footer>
 
-<!--script de boostrap-->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+  <!--script de boostrap-->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+  
+  <!--script de iconify-->
+  <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
 
 </body>
 </html>
