--- a/index.html
+++ b/index.html
@@ -7,12 +7,17 @@
     <link rel="shortcut icon" href="./imagenes/iconos/6819232.png" type="image/x-icon">
     <!--link de boostrap antes de mi css siempre por cascada-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <!--AOS-->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!--mi link css-->
     <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;700&display=swap" rel="stylesheet">
-    <title>Re Construye</title>
+    <!--Etiqueta SEO-->
+    <meta name="description" content="Te damos la bienvenida al sitio de Re Construye arquitectos.">
+    <meta name="keywords" content="ARQUITECTURA, RECONSTRUYE, RECICLAJE, CASAS, APARTAMENTOS, CONSTRUCCIÓN, ESTUDIO DE ARQUITECTURA">
+    <title>Re Construye | INICIO</title>
 </head>
 <body>
     <header id="arriba">
@@ -48,12 +53,7 @@
         </div>
     </header>
 
-    <!-- <section id="logo">
-        <img src="./imagenes/iconos/1.png
-        " alt="">
-    </section> -->
-
-    <section id="entrada">
+    <section id="entrada" data-aos="flip-up"></div>>
         <h1>CAMBIAMOS EL MUNDO, UN EDIFICIO A LA VEZ.</h1>
         <div id="botones">
             <a class="botongaleria" href="pages/galeria.html">
@@ -69,31 +69,9 @@
         <img src="imagenes/galeria/farnsworth.jpg" alt="bienvenida">
     </section>
 
-    <!-- <section id="enlaces">
-        <nav>
-          <ul>
-              <li>
-                  <a href="./pages/nosotros.html">NOSOTROS</a>
-              </li>
-              <li>
-                  <a href="./pages/galeria.html">GALERIA</a>
-              </li>
-              <li>
-                  <a href="./pages/noticias.html">NOTICIAS</a>
-              </li>
-              <li>
-                  <a href="./pages/equipo.html">EQUIPO</a>
-              </li>
-              <li>
-                  <a href="./pages/contacto.html">CONTACTO</a>
-              </li>
-          </ul>
-        </nav>  
-      </section> -->
-
       <footer id="footernosotros">
         <nav>
-            <ul id="foot"> <!--enlaces relativos-->
+            <ul id="foot">
                 <li>
                     <a class="links" href="index.html">INICIO</a>
                 </li>
@@ -116,20 +94,27 @@
         </nav>
         
         <div id="siguenos">
-            <p>SIGUENOS:</p>
             <nav>
                 <ul class="siguenoslink">
                     <li class="facebook">
-                        <a href="https://www.facebook.com/Coderhouse/" target="_blank">Facebook</a>
-                    </li>
+                        <a href="https://www.facebook.com/Coderhouse/" target="_blank">
+                          <iconify-icon icon="ant-design:facebook-filled"></iconify-icon>
+                        </a>
+                      </li>
                     <li class="instagram">
-                        <a href="https://www.instagram.com/coderhouse/" target="_blank">Instagram</a>
+                        <a href="https://www.instagram.com/coderhouse/" target="_blank">
+                            <iconify-icon icon="mdi:instagram"></iconify-icon>
+                        </a>
                     </li>
-                    <li class="twitter">
-                        <a href="https://twitter.com/coderhouse" target="_blank">Twitter</a>
+                    <li class="twitter">                        
+                        <a href="https://twitter.com/coderhouse" target="_blank">
+                            <iconify-icon icon="formkit:twitter"></iconify-icon></iconify-icon>
+                        </a>
                     </li>
-                    <li class="linkedin">
-                        <a href="https://www.linkedin.com/school/coderhouse/" target="_blank">Linkedin</a>
+                    <li class="linkedin">                        
+                        <a href="https://www.linkedin.com/school/coderhouse/" target="_blank">
+                            <iconify-icon icon="mdi:linkedin"></iconify-icon>
+                        </a>
                     </li>
                 </ul>
             </nav> 
@@ -140,5 +125,14 @@
 
     <!--script de boostrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    
+    <!--script de iconify-->
+    <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
+
+    <!--script AOS-->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script> AOS.init();</script>
+
+
 </body>
 </html>
