--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -12,7 +12,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;700&display=swap" rel="stylesheet">
-    <title>GALERIA</title>
+    <!--Etiqueta SEO-->
+    <meta name="description" content="Te damos la bienvenida la sección de Galeria. Aquí podrás ver fotos de nuestros proyectos.">
+    <meta name="keywords" content="ARQUITECTURA, RECONSTRUYE, RECICLAJE, CASAS, APARTAMENTOS, CONSTRUCCIÓN, ESTUDIO DE ARQUITECTURA, GALERIA">
+    <title>Re Construye | GALERIA</title>
 </head>
 <body>
     <header id="arriba">
@@ -97,29 +100,41 @@
             </ul>
         </nav>
         <div id="siguenos">
-            <p>SIGUENOS:</p>
-            <nav>
-                <ul class="siguenoslink">
-                    <li class="facebook">
-                        <a href="https://www.facebook.com/Coderhouse/" target="_blank">Facebook</a>
+          <!-- <p>SIGUENOS:</p> -->
+          <nav>
+              <ul class="siguenoslink">
+                  <li class="facebook">
+                      <a href="https://www.facebook.com/Coderhouse/" target="_blank">
+                        <iconify-icon icon="ant-design:facebook-filled"></iconify-icon>
+                      </a>
                     </li>
-                    <li class="instagram">
-                        <a href="https://www.instagram.com/coderhouse/" target="_blank">Instagram</a>
-                    </li>
-                    <li class="twitter">
-                        <a href="https://twitter.com/coderhouse" target="_blank">Twitter</a>
-                    </li>
-                    <li class="linkedin">
-                        <a href="https://www.linkedin.com/school/coderhouse/" target="_blank">Linkedin</a>
-                    </li>
-                </ul>
-            </nav> 
-        </div>
+                  <li class="instagram">
+                      <a href="https://www.instagram.com/coderhouse/" target="_blank">
+                          <iconify-icon icon="mdi:instagram"></iconify-icon>
+                      </a>
+                  </li>
+                  <li class="twitter">                        
+                      <a href="https://twitter.com/coderhouse" target="_blank">
+                          <iconify-icon icon="formkit:twitter"></iconify-icon></iconify-icon>
+                      </a>
+                  </li>
+                  <li class="linkedin">                        
+                      <a href="https://www.linkedin.com/school/coderhouse/" target="_blank">
+                          <iconify-icon icon="mdi:linkedin"></iconify-icon>
+                      </a>
+                  </li>
+              </ul>
+          </nav> 
+      </div>
 
-        <p>Todos los derechos reservados © 2023 | Pagina creada por Matias Medina.</p>
-    </footer>
-<!--script de boostrap-->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+      <p>Todos los derechos reservados © 2023 | Pagina creada por Matias Medina.</p>
+  </footer>
+
+  <!--script de boostrap-->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+  
+  <!--script de iconify-->
+  <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
 
 </body>
 </html>
