--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -7,12 +7,17 @@
     <link rel="shortcut icon" href="../imagenes/iconos/6819232.png" type="image/x-icon">
     <!--link de boostrap antes de mi css siempre por cascada-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <!--AOS-->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!--mi link css-->
     <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;700&display=swap" rel="stylesheet">
-    <title>NOSOTROS</title>
+    <!--Etiqueta SEO-->
+    <meta name="description" content="Te damos la bienvenida la sección de Nosotros. Aquí podrás saber sobre la historia del estudio y el enfoque que tomamos en nuestros proyectos.">
+    <meta name="keywords" content="ARQUITECTURA, RECONSTRUYE, RECICLAJE, CASAS, APARTAMENTOS, CONSTRUCCIÓN, ESTUDIO DE ARQUITECTURA, NOSOTROS">
+    <title>Re Construye | NOSOTROS</title>
 </head>
 <body>
     <header id="arriba">
@@ -53,7 +58,7 @@
 
     <section class="nosotros">
         <h1>SOBRE NOSOTROS</h1>
-        <P>
+        <P data-aos="fade-right">
             ReConstruye es una empresa fundada en 2020 por tres jóvenes arquitectos recién graduados de la Facultad de Arquitectura en Uruguay. Su enfoque principal es la construcción sostenible y el reciclaje de materiales en obras. El equipo cuenta con una amplia experiencia en el reciclaje de materiales y está comprometido con la creación de un futuro más sostenible y responsable con el medio ambiente.
 
 La empresa ofrece servicios de diseño y construcción personalizados para proyectos residenciales y comerciales. Cada proyecto es planificado y construido de manera eficiente y sostenible, utilizando materiales reciclados y técnicas innovadoras. Además, ReConstruye también ofrece servicios de asesoramiento y consultoría para aquellos que deseen incorporar prácticas sostenibles en sus proyectos existentes.
@@ -64,15 +69,15 @@ El equipo de ReConstruye está altamente capacitado y comprometido con la calida
      </section>
 
      <section id="enfoques" class="grid-container">
-        <div class="sustentabilidad grid-item">
+        <div class="sustentabilidad grid-item" data-aos="fade-left">
           <h2>Sustentabilidad</h2>
           <p>En ReConstruye nos esforzamos por ser una empresa sustentable. Nuestro compromiso con el medio ambiente se refleja en todas nuestras operaciones, desde la elección de materiales hasta la gestión de residuos. Trabajamos para minimizar nuestro impacto en el planeta y fomentar prácticas sostenibles en todos nuestros proyectos.</p>
         </div>
-        <div class="ambiente grid-item">
+        <div class="ambiente grid-item" data-aos="fade-left">
           <h2>Ambiente</h2>
           <p>Nuestro compromiso con el medio ambiente es uno de los pilares fundamentales de nuestra empresa. Nos esforzamos por crear soluciones innovadoras que respeten y protejan el entorno natural en el que operamos. Desde la elección de materiales hasta la implementación de técnicas de construcción sostenibles, buscamos reducir nuestra huella de carbono y minimizar el impacto de nuestras operaciones en el medio ambiente.</p>
         </div>
-        <div class="tecnicas grid-item">
+        <div class="tecnicas grid-item" data-aos="fade-left">
           <h2>Técnicas</h2>
           <p>En ReConstruye estamos comprometidos con la innovación y la mejora continua. Nos esforzamos por mantenernos a la vanguardia de las últimas técnicas de construcción y materiales de construcción para ofrecer a nuestros clientes soluciones innovadoras y eficientes. Trabajamos en estrecha colaboración con nuestros clientes para garantizar que nuestras soluciones se adapten a sus necesidades y cumplan con sus expectativas.</p>
         </div>
@@ -80,7 +85,7 @@ El equipo de ReConstruye está altamente capacitado y comprometido con la calida
 
      <footer id="footernosotros">
         <nav>
-            <ul id="foot"> <!--enlaces relativos-->
+            <ul id="foot"> 
                 <li>
                     <a class="links" href="../index.html">INICIO</a>
                 </li>
@@ -102,29 +107,44 @@ El equipo de ReConstruye está altamente capacitado y comprometido con la calida
             </ul>
         </nav>
         <div id="siguenos">
-            <p>SIGUENOS:</p>
-            <nav>
-                <ul class="siguenoslink">
-                    <li class="facebook">
-                        <a href="https://www.facebook.com/Coderhouse/" target="_blank">Facebook</a>
+          <nav>
+              <ul class="siguenoslink">
+                  <li class="facebook">
+                      <a href="https://www.facebook.com/Coderhouse/" target="_blank">
+                        <iconify-icon icon="ant-design:facebook-filled"></iconify-icon>
+                      </a>
                     </li>
-                    <li class="instagram">
-                        <a href="https://www.instagram.com/coderhouse/" target="_blank">Instagram</a>
-                    </li>
-                    <li class="twitter">
-                        <a href="https://twitter.com/coderhouse" target="_blank">Twitter</a>
-                    </li>
-                    <li class="linkedin">
-                        <a href="https://www.linkedin.com/school/coderhouse/" target="_blank">Linkedin</a>
-                    </li>
-                </ul>
-            </nav> 
-        </div>
+                  <li class="instagram">
+                      <a href="https://www.instagram.com/coderhouse/" target="_blank">
+                          <iconify-icon icon="mdi:instagram"></iconify-icon>
+                      </a>
+                  </li>
+                  <li class="twitter">                        
+                      <a href="https://twitter.com/coderhouse" target="_blank">
+                          <iconify-icon icon="formkit:twitter"></iconify-icon></iconify-icon>
+                      </a>
+                  </li>
+                  <li class="linkedin">                        
+                      <a href="https://www.linkedin.com/school/coderhouse/" target="_blank">
+                          <iconify-icon icon="mdi:linkedin"></iconify-icon>
+                      </a>
+                  </li>
+              </ul>
+          </nav> 
+      </div>
 
-        <p>Todos los derechos reservados © 2023 | Pagina creada por Matias Medina.</p>
-    </footer>
-<!--script de boostrap-->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+      <p>Todos los derechos reservados © 2023 | Pagina creada por Matias Medina.</p>
+  </footer>
+
+  <!--script de boostrap-->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+  
+  <!--script de iconify-->
+  <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
+
+  <!--script AOS-->
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script> AOS.init();</script>
 
 </body>
 </html>
