--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -7,12 +7,17 @@
     <link rel="shortcut icon" href="../imagenes/iconos/6819232.png" type="image/x-icon">
     <!--link de boostrap antes de mi css siempre por cascada-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <!--AOS-->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!--mi link css-->
     <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;700&display=swap" rel="stylesheet">
-    <title>NOTICIAS</title>
+    <!--Etiqueta SEO-->
+    <meta name="description" content="Te damos la bienvenida la sección de Noticias. Aquí podrás saber sobre las últimas novedades de productos y técnicas, en el mundo de la arquitectura.">
+    <meta name="keywords" content="ARQUITECTURA, RECONSTRUYE, RECICLAJE, CASAS, APARTAMENTOS, CONSTRUCCIÓN, ESTUDIO DE ARQUITECTURA, NOTICIAS">
+    <title>Re Construye | NOTICIAS</title>
 </head>
 <body>
     <header id="arriba">
@@ -51,14 +56,61 @@
         </div>
     </header>
 
-    <section class="nosotros">
+    <section class="noticias">
         <h1>NOTICIAS</h1>
-        <img src="../imagenes/iconos/17-07-20-Elementor-Page-Builder-construye-tu-web-de-forma-fácil-y-eficaz-1-1200x630.jpg" alt="">
-     </section>
+        <div class="noticiasdiv" data-aos="fade-right">
+          <div class="grid-container-noticias">
+            <img src="../imagenes/nosotros/1.jpg" alt="Precio de la vivienda.">
+            <div class="text">
+              <h2>El precio de la vivienda experimenta el mayor crecimiento tras la pandemia, un 6,7% en el primer trimestre de 2023, según Gesvalt</h2>
+              <p>Gesvalt, compañía del sector de la consultoría, valoración y actuaciones técnicas, ha publicado su Informe de Vivienda correspondiente al primer trimestre del año 2023. El estudio, realizado con datos propios por el departamento de Research de la compañía, refleja un incremento del precio de la vivienda del 6,7% con respecto al mismo periodo del año 2022.</p>
+              <a class="botoncontacto" href="https://www.infoconstruccion.es/noticias/20230530/precio-vivienda-gestval" target="_blank">
+                <button>Leer Más >></button>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="noticiasdiv" data-aos="fade-left">
+          <div class="grid-container-noticias">
+            <img src="../imagenes/nosotros/2.jpg" alt="Lignum Tech.">
+            <div class="text">
+              <h2>Lignum Tech adquiere una nave de más de 3.000 m2 en Soria para su nueva planta robotizada de baños industrializados</h2>
+              <p>Lignum Tech, compañía perteneciente a la Corporación Vía Ágora, ha adquirido una parcela de 5.000 m2 de superficie en el polígono Sepes, en Cuenca, con una nave de más de 3.000 m2 de superficie construida, para instalar su nueva planta robotizada de baños industrializados.</p>
+              <a class="botoncontacto" href="https://www.infoconstruccion.es/noticias/20230530/lignum-tech-banos-prefabricados" target="_blank">
+                <button>Leer Más >></button>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="noticiasdiv" data-aos="fade-right">
+          <div class="grid-container-noticias">
+            <img src="../imagenes/nosotros/3.jpg" alt="Potencia solar.">
+            <div class="text">
+              <h2>La potencia solar fotovoltaica creció un 25% en 2022</h2>
+              <p>"La fotovoltaica se ha establecido como una fuente de energía limpia y sostenible que ha venido a cambiar la forma en que generamos y consumimos energía", aseguran desde la empresa Annovo. Cada vez más gente está concienciada con el medioambiente y busca alternativas más sostenibles como la energía solar. De hecho, según los datos de Statista, "la potencia solar fotovoltaica generada en España se ha triplicado en los últimos 4 años", pasando de 9.252 gigavatios-hora en 2019 a 27.864 en 2022. Un aumento del 25% si se compara con los datos del año anterior. </p>
+              <a class="botoncontacto" href="https://www.infoconstruccion.es/noticias/20230529/crece-consumo-ernegia" target="_blank">
+                <button>Leer Más >></button>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="noticiasdiv" data-aos="fade-left">
+          <div class="grid-container-noticias">
+            <img src="../imagenes/nosotros/4.jpg" alt="La Paloma cerámicas.">
+            <div class="text">
+              <h2>La Paloma Cerámicas adquiere Cerámicas Malpesa</h2>
+              <p>La Paloma Cerámicas, empresa especializada en fabricación y comercialización de ladrillo caravista, ha adquirido Cerámica Malpesa. De esta manera, amplia su gama de productos para poder ofrecer un completo portafolio, incluyendo ladrillos caravista, ladrillos prensados, adoquines cerámicos y sistemas constructivos como Termoklinker, Iris o Maps.</p>
+              <a class="botoncontacto" href="https://www.infoconstruccion.es/noticias/20230525/la-paloma-adquiere-malpesa" target="_blank">
+                <button>Leer Más >></button>
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
 
     <footer id="footernosotros">
         <nav>
-            <ul id="foot"> <!--enlaces relativos-->
+            <ul id="foot">
                 <li>
                     <a class="links" href="../index.html">INICIO</a>
                 </li>
@@ -80,29 +132,44 @@
             </ul>
         </nav>
         <div id="siguenos">
-            <p>SIGUENOS:</p>
-            <nav>
-                <ul class="siguenoslink">
-                    <li class="facebook">
-                        <a href="https://www.facebook.com/Coderhouse/" target="_blank">Facebook</a>
+          <nav>
+              <ul class="siguenoslink">
+                  <li class="facebook">
+                      <a href="https://www.facebook.com/Coderhouse/" target="_blank">
+                        <iconify-icon icon="ant-design:facebook-filled"></iconify-icon>
+                      </a>
                     </li>
-                    <li class="instagram">
-                        <a href="https://www.instagram.com/coderhouse/" target="_blank">Instagram</a>
-                    </li>
-                    <li class="twitter">
-                        <a href="https://twitter.com/coderhouse" target="_blank">Twitter</a>
-                    </li>
-                    <li class="linkedin">
-                        <a href="https://www.linkedin.com/school/coderhouse/" target="_blank">Linkedin</a>
-                    </li>
-                </ul>
-            </nav> 
-        </div>
+                  <li class="instagram">
+                      <a href="https://www.instagram.com/coderhouse/" target="_blank">
+                          <iconify-icon icon="mdi:instagram"></iconify-icon>
+                      </a>
+                  </li>
+                  <li class="twitter">                        
+                      <a href="https://twitter.com/coderhouse" target="_blank">
+                          <iconify-icon icon="formkit:twitter"></iconify-icon></iconify-icon>
+                      </a>
+                  </li>
+                  <li class="linkedin">                        
+                      <a href="https://www.linkedin.com/school/coderhouse/" target="_blank">
+                          <iconify-icon icon="mdi:linkedin"></iconify-icon>
+                      </a>
+                  </li>
+              </ul>
+          </nav> 
+      </div>
 
-        <p>Todos los derechos reservados © 2023 | Pagina creada por Matias Medina.</p>
-    </footer>
-<!--script de boostrap-->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+      <p>Todos los derechos reservados © 2023 | Pagina creada por Matias Medina.</p>
+  </footer>
+
+  <!--script de boostrap-->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+  
+  <!--script de iconify-->
+  <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
+
+  <!--script AOS-->
+ <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+ <script> AOS.init();</script>
 
 </body>
 </html>
