scroll horizontal solucionado

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
     </header>
 
-    <section id="entrada" data-aos="flip-up"></div>>
+    <section id="entrada" data-aos="fade-right"></div>
         <h1>CAMBIAMOS EL MUNDO, UN EDIFICIO A LA VEZ.</h1>
         <div id="botones">
             <a class="botongaleria" href="pages/galeria.html">
