--- a/pages/equipo.html
+++ b/pages/equipo.html
@@ -69,7 +69,7 @@
           </div>
         </div>
 
-        <div class="frank" data-aos="fade-left">
+        <div class="frank" data-aos="fade-right">
           <div class="grid-container">
             <img src="../imagenes/equipo/frank-gehry.jpeg" alt="Frank Gehry">
             <div class="text">
