--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -70,7 +70,7 @@
             </div>
           </div>
         </div>
-        <div class="noticiasdiv" data-aos="fade-left">
+        <div class="noticiasdiv" data-aos="fade-right">
           <div class="grid-container-noticias">
             <img src="../imagenes/nosotros/2.jpg" alt="Lignum Tech.">
             <div class="text">
@@ -94,7 +94,7 @@
             </div>
           </div>
         </div>
-        <div class="noticiasdiv" data-aos="fade-left">
+        <div class="noticiasdiv" data-aos="fade-right">
           <div class="grid-container-noticias">
             <img src="../imagenes/nosotros/4.jpg" alt="La Paloma cerámicas.">
             <div class="text">
