--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -69,15 +69,15 @@ El equipo de ReConstruye está altamente capacitado y comprometido con la calida
      </section>
 
      <section id="enfoques" class="grid-container">
-        <div class="sustentabilidad grid-item" data-aos="fade-left">
+        <div class="sustentabilidad grid-item" data-aos="fade-right">
           <h2>Sustentabilidad</h2>
           <p>En ReConstruye nos esforzamos por ser una empresa sustentable. Nuestro compromiso con el medio ambiente se refleja en todas nuestras operaciones, desde la elección de materiales hasta la gestión de residuos. Trabajamos para minimizar nuestro impacto en el planeta y fomentar prácticas sostenibles en todos nuestros proyectos.</p>
         </div>
-        <div class="ambiente grid-item" data-aos="fade-left">
+        <div class="ambiente grid-item" data-aos="fade-right">
           <h2>Ambiente</h2>
           <p>Nuestro compromiso con el medio ambiente es uno de los pilares fundamentales de nuestra empresa. Nos esforzamos por crear soluciones innovadoras que respeten y protejan el entorno natural en el que operamos. Desde la elección de materiales hasta la implementación de técnicas de construcción sostenibles, buscamos reducir nuestra huella de carbono y minimizar el impacto de nuestras operaciones en el medio ambiente.</p>
         </div>
-        <div class="tecnicas grid-item" data-aos="fade-left">
+        <div class="tecnicas grid-item" data-aos="fade-right">
           <h2>Técnicas</h2>
           <p>En ReConstruye estamos comprometidos con la innovación y la mejora continua. Nos esforzamos por mantenernos a la vanguardia de las últimas técnicas de construcción y materiales de construcción para ofrecer a nuestros clientes soluciones innovadoras y eficientes. Trabajamos en estrecha colaboración con nuestros clientes para garantizar que nuestras soluciones se adapten a sus necesidades y cumplan con sus expectativas.</p>
         </div>
