--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -63,7 +63,7 @@
         <section class="contacto">
           <h2>METODOS DE CONTACTO</h2>
           <p>Comunícate con nosotros vía teléfono, email, WhatsApp o completa el formulario para enviarnos tu consulta:</p>
-          <section id="equipo">
+          <section>
             <div class="contacto-item">
               <i class="fa-solid fa-phone"></i>
               <p>(+598) 2-4877802</p>
