--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <!--Etiqueta SEO-->
     <meta name="description" content="Te damos la bienvenida al sitio de Re Construye arquitectos.">
     <meta name="keywords" content="ARQUITECTURA, RECONSTRUYE, RECICLAJE, CASAS, APARTAMENTOS, CONSTRUCCIÓN, ESTUDIO DE ARQUITECTURA">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <title>Re Construye | INICIO</title>
 </head>
 <body>
@@ -45,6 +46,9 @@
                       </li>
                       <li class=" nav-item">
                         <a class=" nav-link" href="pages/equipo.html">Equipo</a>
+                      </li>
+                      <li class=" nav-item">
+                        <a class=" nav-link" href="pages/shop.html">Shop</a>
                       </li>
                       <li class=" nav-item">
                         <a class=" nav-link" href="pages/contacto.html">Contacto</a>
@@ -91,6 +95,9 @@
                     <a class="links" href="pages/equipo.html">EQUIPO</a>
                 </li>
                 <li>
+                    <a class="links" href="pages/shop.html">SHOP</a>
+                </li>
+                <li>
                     <a class="links" href="pages/contacto.html">CONTACTO</a>
                 </li>
             </ul>
@@ -135,6 +142,7 @@
     <!--script AOS-->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script> AOS.init();</script>
+    <script src="main.js"></script>
 
 
 </body>
