--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -47,6 +47,9 @@
                         <a class=" nav-link" href="equipo.html">Equipo</a>
                       </li>
                       <li class=" nav-item">
+                        <a class=" nav-link" href="shop.html">Shop</a>
+                      </li>
+                      <li class=" nav-item">
                         <a class=" nav-link" href="contacto.html">Contacto</a>
                       </li>
                     </ul>
@@ -101,6 +104,9 @@ El equipo de ReConstruye está altamente capacitado y comprometido con la calida
                 <li>
                     <a class="links" href="equipo.html">EQUIPO</a>
                 </li>
+                <li>
+                  <a class="links" href="shop.html">SHOP</a>
+              </li>
                 <li>
                     <a class="links" href="contacto.html">CONTACTO</a>
                 </li>
