boton ir arriba

--- a/pages/shop.html
+++ b/pages/shop.html
@@ -189,7 +189,9 @@
         </div>
       </div>
     </div>
-   
+
+    <button id="irArribaBtn">ʌ</button>
+
     <footer id="footernosotros">
         <nav>
             <ul id="foot">
@@ -257,6 +259,8 @@
  <script> AOS.init();</script>
 
  <script src="../main.js"></script>
+
+ <script src="script.js"></script>
 
 </body>
 </html>
