nuevo logo de twitter

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -127,7 +127,7 @@ El equipo de ReConstruye está altamente capacitado y comprometido con la calida
                   </li>
                   <li class="twitter">                        
                       <a href="https://twitter.com/coderhouse" target="_blank">
-                          <iconify-icon icon="formkit:twitter"></iconify-icon></iconify-icon>
+                        <iconify-icon icon="ph:x-fill"></iconify-icon>
                       </a>
                   </li>
                   <li class="linkedin">                        
