--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -153,7 +153,7 @@
                   </li>
                   <li class="twitter">                        
                       <a href="https://twitter.com/coderhouse" target="_blank">
-                          <iconify-icon icon="formkit:twitter"></iconify-icon></iconify-icon>
+                        <iconify-icon icon="ph:x-fill"></iconify-icon>
                       </a>
                   </li>
                   <li class="linkedin">                        
