--- a/pages/shop.html
+++ b/pages/shop.html
@@ -16,6 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/b0c45c5485.js" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/44b994f439.js" crossorigin="anonymous"></script>
+   <!--sweetalert-->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!--Etiqueta SEO-->
     <meta name="description" content="Te damos la bienvenida a la sección de shop. Aquí podrá comprar articulos de la empresa.">
@@ -79,7 +80,7 @@
           <p>Precio: U$D 2500</p>
           <p id="contenedorsimple_20pies"></p>
           <div class="form-group buttonscarrito">
-            <button class="botoncarrito" id="botoncarrito20pies" type="">Carrito</button>
+            <button class="botoncarrito" id="botoncarrito20pies" type="button">Carrito</button>
           </div>
         </div>
       </div>
@@ -94,7 +95,7 @@
           <p>Precio: U$D 3500</p>
           <p id="contenedorsimple_30pies"></p>
           <div class="form-group buttonscarrito">
-            <button class="botoncarrito" id="botoncarrito30pies" type="">Carrito</button>
+            <button class="botoncarrito" id="botoncarrito30pies" type="button">Carrito</button>
           </div>
         </div>
       </div>
@@ -109,7 +110,7 @@
           <p>Precio: U$D 5000</p>
           <p id="contenedorsimple_40pies"></p>
           <div class="form-group buttonscarrito">
-            <button class="botoncarrito" id="botoncarrito40pies" type="">Carrito</button>
+            <button class="botoncarrito" id="botoncarrito40pies" type="button">Carrito</button>
           </div>
         </div>
       </div>
@@ -124,7 +125,7 @@
           <p>Precio: U$D 15000</p>
           <p id="contenedorcasa_15m2"></p>
           <div class="form-group buttonscarrito">
-            <button class="botoncarrito" id="botoncarrito15m2" type="">Carrito</button>
+            <button class="botoncarrito" id="botoncarrito15m2" type="button">Carrito</button>
           </div>
         </div>
       </div>
@@ -139,7 +140,7 @@
           <p>Precio: U$D 25000</p>
           <p id="contenedorcasa_30m2"></p>
           <div class="form-group buttonscarrito">
-            <button class="botoncarrito" id="botoncarrito30m2" type="">Carrito</button>
+            <button class="botoncarrito" id="botoncarrito30m2" type="button">Carrito</button>
           </div>
         </div>
       </div>
@@ -154,7 +155,7 @@
           <p>Precio: U$D 32000</p>
           <p id="contenedorcasa_45m2"></p>
           <div class="form-group buttonscarrito">
-            <button class="botoncarrito" id="botoncarrito45m2" type="">Carrito</button>
+            <button class="botoncarrito" id="botoncarrito45m2" type="button">Carrito</button>
           </div>
         </div>
       </div>
@@ -169,7 +170,7 @@
           <p>Precio: U$D 36000</p>
           <p id="contenedorcasa_50m2"></p>
           <div class="form-group buttonscarrito">
-            <button class="botoncarrito" id="botoncarrito50m2" type="">Carrito</button>
+            <button class="botoncarrito" id="botoncarrito50m2" type="button">Carrito</button>
           </div>
         </div>
       </div>
@@ -184,7 +185,7 @@
           <p>Precio: U$D 40000</p>
           <p id="contenedorcasa_60m2"></p>
           <div class="form-group buttonscarrito">
-            <button class="botoncarrito" id="botoncarrito60m2" type="">Carrito</button>
+            <button class="botoncarrito" id="botoncarrito60m2" type="button">Carrito</button>
           </div>
         </div>
       </div>
