--- a/pages/shop.html
+++ b/pages/shop.html
@@ -68,9 +68,14 @@
 
     <section class="galeria">
         <h1>SHOP | TIENDA</h1>
+        <button id="boton" class="form-group botoncarrito">¡ACCEDE A LA OFERTA!</button>
+    <div id="popup-mensaje">
+      <p>¡¡PELADOS OBTIENEN UN 15% DE AUMENTO EN NUESTROS PRODUCTOS!!</p>
+    </div>
     </section>
 
-    
+    <div id="dolarContainer"></div>
+
     <div class="zaha" data-aos="fade-right">
       <div class="grid-container">
         <img src="../imagenes/shop/twenty-fdry-container.jpg" alt="contenedor20pies">
