--- a/pages/shop.html
+++ b/pages/shop.html
@@ -74,8 +74,6 @@
     </div>
     </section>
 
-    <div id="dolarContainer"></div>
-
     <div class="zaha" data-aos="fade-right">
       <div class="grid-container">
         <img src="../imagenes/shop/twenty-fdry-container.jpg" alt="contenedor20pies">
@@ -195,6 +193,12 @@
         </div>
       </div>
     </div>
+
+    <div class="dolar">
+      <h2>COTIZACION DOLAR HOY:</h2>
+      <div id="dolarContainer" class="dolar-box"></div>
+    </div>
+    
 
     <button id="irArribaBtn">ʌ</button>
 
